deployments/k8s/base/api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: go-cloud
  labels:
    app: api-server
spec:
  selector:
    app: api-server
  ports:
    - name: metrics
      port: 8080
      targetPort: 8080
