deployments/k8s/base/notifier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifier
  namespace: go-cloud
  labels:
    app: notifier
spec:
  selector:
    app: notifier
  ports:
    - name: metrics
      port: 9093
      targetPort: 9093
