deployments/k8s/base/scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  namespace: go-cloud
  labels:
    app: scheduler
spec:
  selector:
    app: scheduler
  ports:
    - name: metrics
      port: 9091
      targetPort: 9091
