deployments/k8s/base/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: go-cloud
  labels:
    app: worker
spec:
  selector:
    app: worker
  ports:
    - name: metrics
      port: 9092
      targetPort: 9092
